ensure changelog folder always exists

--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -138,6 +138,7 @@ jobs:
 
           echo "Copying changelogs to docs"
           mkdir -p ./website/src/content/docs/charts/
+          mkdir -p ./changelogs
           cp -r ./changelogs/** ./website/src/content/docs/charts/
 
           export DEBUG=false
