--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,9 +21,9 @@ repos:
       - id: check-case-conflict # checks for files that would conflict in case-insensitive filesystems.
         exclude: ^archive/
       - id: check-executables-have-shebangs # ensures that (non-binary) executables have a shebang.
-        exclude: (^archive/|^containers/)
+        exclude: (^archive/|^website\/public|^containers/)
       - id: check-shebang-scripts-are-executable # ensures that (non-binary) files with a shebang are executable.
-        exclude: (^archive/|^containers/)
+        exclude: (^archive/|^website\/public|^containers/)
       - id: check-docstring-first
         exclude: ^archive/
       - id: check-symlinks
@@ -37,7 +37,7 @@ repos:
       - id: check-added-large-files # prevents giant files from being committed.
         exclude: \.(png|jpg|jpeg|svg|yaml|yml|tpl)$
       - id: check-yaml # checks yaml files for parseable syntax.
-        exclude: (^archive|templates\/.*|crds\/.*|questions.yaml|chart_schema.yaml|test-chart\/.*\.yaml|^clustertool)
+        exclude: (^archive|^website\/public|templates\/.*|crds\/.*|questions.yaml|chart_schema.yaml|test-chart\/.*\.yaml|^clustertool)
       - id: detect-private-key # detects the presence of private keys.
         exclude: ^archive/
 
@@ -53,5 +53,5 @@ repos:
     rev: v3.1.0
     hooks:
       - id: prettier
-        exclude: (^archive|templates\/.*|crds\/.*|README.md|CHANGELOG.md|questions.yaml|devcontainer.json|^clustertool)
+        exclude: (^archive|^website\/public|templates\/.*|crds\/.*|README.md|CHANGELOG.md|questions.yaml|devcontainer.json|^clustertool)
         files: \.(js|ts|jsx|tsx|css|less|html|json|markdown|md|yaml|yml)$
