--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -4,6 +4,7 @@ concurrency:
   group: ${{ github.head_ref }}-charts-website-release
 
 on:
+  workflow_call:
   workflow_dispatch:
   #pull_request:
   #  paths:
