--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -70,13 +70,25 @@ jobs:
         run: |
           echo "PR title: ${{ github.event.pull_request.title }}"
 
-  automerge-and-approve:
+  finished:
     needs:
       - pr-changes
       - charts-lint
       - charts-test
       - website-and-docs
       - print_head_msg
+    name: Finished PR Tests
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Finisher
+        continue-on-error: true
+        run: |
+          echo "DONE"
+
+  automerge-and-approve:
+    needs:
+      - finished
     if: ${{ 
       contains(needs.print_head_msg.outputs.head-commit-message, 'by renovate') || 
       contains(needs.print_head_msg.outputs.head-commit-message, '.all-contributorsrc') }}
