--- a/.github/workflows/containers.build.yaml
+++ b/.github/workflows/containers.build.yaml
@@ -53,23 +53,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
-      - name: hadolint
-        uses: reviewdog/action-hadolint@73fec8b28091e5082c19df69815dd749d97b882a # v1.46.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-review
-          filter_mode: diff_context
-          hadolint_ignore: DL3007
-          fail_on_error: true
-            exclude: |
-               /website/*
-               /cluster/*
-               /archive/*
-               /clustertool/*
-               /.github/*
-               /website/*
-               /repositories/*
-               /templates/*
+      #- name: hadolint
+      #  uses: reviewdog/action-hadolint@73fec8b28091e5082c19df69815dd749d97b882a # v1.46.0
+      #  with:
+      #    github_token: ${{ secrets.GITHUB_TOKEN }}
+      #    reporter: github-pr-review
+      #    filter_mode: diff_context
+      #    hadolint_ignore: DL3007
+      #    fail_on_error: true
+      #      exclude: |
+      #         /website/*
+      #         /cluster/*
+      #         /archive/*
+      #         /clustertool/*
+      #         /.github/*
+      #         /website/*
+      #         /repositories/*
+      #         /templates/*
 
 
   build:
