--- a/.github/workflows/containers.build.yaml
+++ b/.github/workflows/containers.build.yaml
@@ -89,7 +89,7 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.changes.outputs.matrix) }}
       fail-fast: false
-    if: ${{ needs.changes.outputs.matrix != '{}' && needs.changes.outputs.matrix != '' && fromJson(needs.changes.outputs.matrix.container) != [] }}
+    if: ${{ needs.changes.outputs.matrix != '{}' && needs.changes.outputs.matrix != '' && fromJson(needs.changes.outputs.matrix).container != null && fromJson(needs.changes.outputs.matrix).container | length > 0 }}
     steps:
       - name: Checkout
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
