--- a/.github/workflows/containers.build.yaml
+++ b/.github/workflows/containers.build.yaml
@@ -51,7 +51,7 @@ jobs:
           echo ::set-output name=containers::${CONTAINERS}
           
           # Check if containers were found and set the containers_found output
-          if [[ -z "$CONTAINERS" ]]; then
+          if [[ "$CONTAINERS" == "[]" || -z "$CONTAINERS" ]]; then
             echo "No Containers Found, Skipping"
             echo ::set-output name=containers_found::false
           else
