--- a/.github/workflows/clustertool.release.yaml
+++ b/.github/workflows/clustertool.release.yaml
@@ -9,7 +9,7 @@ on:
       - 'clustertool/**'
 jobs:
   goreleaser:
-    runs-on: actions-runner-large
+    runs-on: actions-runners
     steps:
       - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
