--- a/.github/workflows/clustertool.tests.yaml
+++ b/.github/workflows/clustertool.tests.yaml
@@ -30,7 +30,7 @@ permissions:
   contents: read
 jobs:
   build:
-    runs-on: actions-runner-large
+    runs-on: actions-runners
     steps:
       - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
