some renovate cleanup

--- a/.github/renovate/kinds/astro.json5
+++ b/.github/renovate/kinds/astro.json5
@@ -8,7 +8,6 @@
     "branchPrefix": "astro-",
     "enabled": true, // Enable updates for website dependencies
     "updateTypes": ["major", "minor", "patch", "digest", "pin", "lockfile"], // Allow updates for all version types
-    "semanticCommitScope": "website",
-  "requiredStatusChecks": null
+    "semanticCommitScope": "website"
   },
 }
