--- a/.github/renovate/updates/lockfile.json5
+++ b/.github/renovate/updates/lockfile.json5
@@ -3,11 +3,7 @@
   "packageRules": [
     {
       matchUpdateTypes: ["lockfile"],
-      automerge: true,
-      "autoApprove": true
+      automerge: true
     }
   ],
-  "ignore": [
-    // Add any paths or patterns to ignore specific digest updates, if necessary
-  ]
 }
