--- a/.github/renovate/updates/pin.json5
+++ b/.github/renovate/updates/pin.json5
@@ -3,8 +3,7 @@
   "packageRules": [
     {
       matchUpdateTypes: ["pin"],
-      automerge: true,
-      "autoApprove": true
+      automerge: true
     }
   ],
   "ignore": [
