--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -9,9 +9,8 @@
     ],
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
-    "semanticCommitScope": "Flux Objects",
+    "semanticCommitScope": "flux",
     "pinDigests": false, // Set to false to not pin digest references
     "branchPrefix": "flux-",
   },
-
 }
