--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -5,6 +5,7 @@
   "automergeType": "pr",
   "pinDigests": true,
     "semanticCommits": "enabled",
+    "bumpVersion": true,
   "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   gitAuthor: "TrueCharts-Admin <bot@truecharts.org>",
@@ -29,13 +30,12 @@
         "github>truecharts/public//.github/renovate/kinds/helm-values.json5",
         "github>truecharts/public//.github/renovate/kinds/helm.json5",
         "github>truecharts/public//.github/renovate/special/groups.json5",
-        "github>truecharts/public//.github/renovate/special/automerge.json5",
-        "github>truecharts/public//.github/renovate/special/customRules.json5",
-        "github>truecharts/public//.github/renovate/special/customVersioning.json5",
         "github>truecharts/public//.github/renovate/special/schedules.json5",
         "github>truecharts/public//.github/renovate/basics/commitMessage.json5",
         "github>truecharts/public//.github/renovate/basics/labels.json5",
-        "github>truecharts/public//.github/renovate/special/customClusterManagers.json5"
+        "github>truecharts/public//.github/renovate/special/customClusterManagers.json5",
+        "github>truecharts/public//.github/renovate/special/customRules.json5",
+        "github>truecharts/public//.github/renovate/special/customVersioning.json5"
       ],
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
