--- a/.github/renovate/updates/minor.json5
+++ b/.github/renovate/updates/minor.json5
@@ -2,6 +2,7 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "minor": {
     "enabled": true, // Enable minor updates
+    "automerge": true
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
