--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -3,9 +3,9 @@
 
   "flux": {
     "fileMatch": [
-      "(^|/)clusters/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)repositories/.+\\.ya?ml(?:\\.j2)?$",
-      "(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$"
+      "(^|/)clusters/.+\\.ya?ml$",
+      "(^|/)repositories/.+\\.ya?ml$",
+      "(^|/)kubernetes/.+\\.ya?ml$"
     ],
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
