--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -15,8 +15,8 @@ jobs:
         uses: hmarr/auto-approve-action@v3
         if: ${{ 
           github.event.workflow_run.pull_requests[0].base.repo.id == github.event.workflow_run.pull_requests[0].head.repo.id && 
-          (github.event.workflow_run.head_commit.message, 'by renovate') || 
-           github.event.workflow_run.head_commit.message, '.all-contributorsrc'))
+          (contains(github.event.workflow_run.head_commit.message, 'by renovate') || 
+           contains(github.event.workflow_run.head_commit.message, '.all-contributorsrc'))
           }}
         with:
           github-token: "${{ secrets.OR_PAT }}"
