--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -13,11 +13,7 @@ jobs:
     steps:
       - name: Approve PR
         uses: hmarr/auto-approve-action@v3
-        if: ${{ 
-          github.event.workflow_run.pull_requests[0].base.repo.id == github.event.workflow_run.pull_requests[0].head.repo.id && 
-          (contains(github.event.workflow_run.head_commit.message, 'by renovate') || 
-           contains(github.event.workflow_run.head_commit.message, '.all-contributorsrc'))
-          }}
+        if: github.actor == 'truecharts-admin'
         with:
           github-token: "${{ secrets.OR_PAT }}"
 
@@ -25,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Automerge
+        if: github.actor == 'truecharts-admin'
         uses: pascalgn/automerge-action@7961b8b5eec56cc088c140b56d864285eabd3f67 # v0.16.4
         env:
           GITHUB_TOKEN: "${{ secrets.BOT_TOKEN }}"
