--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           github-token: "${{ secrets.OR_PAT }}"
           review-message: "Auto approved automated PR"
-          pull-request-number: ${{ github.event.inputs.pullRequestNumber }}
+          pull-request-number: ${{ github.event.workflow_run.pull_requests[0].number }}
 
   automerge:
     runs-on: ubuntu-latest
