--- a/archive/charts/stable/automatic-music-downloader/Chart.yaml
+++ b/archive/charts/stable/automatic-music-downloader/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: A Lidarr companion script to automatically download music for Lidarr.
 home: https://truecharts.org/charts/stable/automatic-music-downloader
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/automatic-music-downloader.webp
@@ -35,4 +35,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/automatic-music-downloader
   - https://hub.docker.com/r/randomninjaatk/amd
 type: application
-version: 11.2.0
+version: 12.0.0
