chore(freeradius): deprecate due to broken image
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/charts/stable/freeradius/Chart.yaml
+++ b/charts/stable/freeradius/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: OpenSource Radius implementation
 home: https://truecharts.org/charts/stable/freeradius
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/freeradius.webp
@@ -33,4 +33,4 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/freeradius
   - https://github.com/truecharts/containers/tree/master/apps/freeradius
 type: application
-version: 15.2.0
+version: 16.0.0
